--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@
        margin: 20px 0;
        line-height: 25px;
    }
-   a{
+   #save-preference{
        display: block;
-       width: 150px;
+       width: 280px;
        position: relative;
        margin: 10px auto;
        text-align: center;
